# stock_duifu

./: .env.example  .gitignore  AGENTS.md  Makefile  PRD_MVP.md  alembic.ini  deploy.sh  deploy_ubuntu.sh  docker-compose.yml  get_data.sh  pyproject.toml  start.sh  stop.sh
backend/: __init__.py
docs/: ARCHITECTURE.md  DATA_SOURCE_FAILOVER_DESIGN.md  DATA_SOURCE_POLICY.md  DECISIONS.md  HANDOFF.md  PROJECT_CONTEXT.md  TASKS.md  TRADING_RULES.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
migrations/: env.py
scripts/: audit-market-data.sh  backfill-target-daily.sh  check-dev-environment.sh  db-current.sh  db-upgrade.sh  dev-api.sh  dev-web.sh  generate-candidates.sh  generate-market-environment.sh  generate-sector-ranking.sh  generate-trade-plans.sh  generate-trade-reviews.sh  ingest-market-data.sh  retarget-closed-trade-plans.sh  run-after-close-workflow.sh  run-realtime-workflow.sh  run-simulation.sh  track-trade-plans.sh
tests/: test_after_close_workflow.py  test_after_close_workflow_cli.py  test_alembic_revisions.py  test_candidate_cli.py  test_candidate_provider.py  test_candidate_screening.py  test_data_source_router.py  test_database_schema.py  test_deployment_scripts.py  test_free_data_provider_fallback.py  test_global_index_quotes.py  test_health.py  test_market_data_audit.py  test_market_data_ingest.py  test_market_data_schema.py  test_market_environment.py  test_market_environment_cli.py  test_provider_selection.py  test_realtime_quote_workflow.py  test_sector_cli.py  test_sector_provider.py  (+7 more)
(+50 files in other folders)
