[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-decision-system"
version = "0.1.0"
description = "A-share short-term trading decision support system"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.13,<2.0",
    "akshare>=1.16,<2.0",
    "fastapi>=0.115,<1.0",
    "pandas>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic-settings>=2.0,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "tushare>=1.4,<2.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
